--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "challenge-01",
+  "name": "challenge-0401",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "repository": "git@github.com:alclopes/UnitTests.git",
+  "author": "Andre Carvalho <alclopes@gmail.com>",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "test": "clear; jest --runInBand --setupFilesAfterEnv dotenv/config"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,9 +26,12 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
     "@types/uuid": "^8.3.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
